# program-knock

./: .gitignore  CLAUDE.md  README.md
.moon/: workspace.yml
docs/: curriculum.md  learning-guide.md
docs/01_組み込み関数/: practice_01.md  practice_02.md
docs/02_リストの操作/: practice_01.md  practice_02.md
docs/03_データ構造_リスト/: practice_02.md
docs/04_データ構造_辞書/: practice_01.md
docs/05_データ構造_タプル/: practice_01.md  practice_02.md
docs/06_データ構造_集合/: practice_01.md  practice_02.md
package/: README.md
package/python/: moon.yml  pyproject.toml
package/python/src/: age_statistics.py  count_in_range.py  count_sales.py  count_word_frequencies.py  fake_chinese_checker.py  flood_fill.py  hit_and_blow.py  kmeans_clustering.py  life_game.py  lru_cache.py  markdown_to_html.py  product_deduplication.py  room_reservation.py  scope_manager.py  server_log_analysis.py  simulate_langtons_ant.py  suggest_aws_service.py  sushi_seating.py
package/python/tests/: test_age_statistics.py  test_calc_cpk.py  test_calculate_new_year_holiday.py  test_count_connections.py  test_count_in_range.py  test_count_sales.py  test_count_word_frequencies.py  test_fake_chinese_checker.py  test_find_closest_value.py  test_flood_fill.py  test_hit_and_blow.py  test_kmeans_clustering.py  test_life_game.py  test_lru_cache.py  test_markdown_to_html.py  test_product_deduplication.py  test_remove_duplicate_customers.py  test_room_reservation.py  test_run_length_encoding.py  test_scope_manager.py  test_server_log_analysis.py  test_simulate_langtons_ant.py  test_suggest_aws_service.py  test_sushi_seating.py
(+342 files in other folders)
